fix: seek时间更新增加边界值控制; 播放器容器增加overflow:hidden

--- a/packages/xgplayer/src/style/common.scss
+++ b/packages/xgplayer/src/style/common.scss
@@ -8,6 +8,7 @@
   -moz-user-select:none;
   -ms-user-select:none;
   user-select:none;
+  overflow: hidden;
   * {
       margin: 0;
       padding: 0;
@@ -28,12 +29,15 @@
       z-index: 9999;
   }
   &.xgplayer-is-fullscreen.xgplayer-inactive{
-      cursor: none;
+    cursor: none;
   }
   video {
-      width:100%;
-      height: 100%;
-      outline: none;
+    width:100%;
+    height: 100%;
+    outline: none;
+    position: absolute;
+    top: 0;
+    left: 0;  
   }
   &[data-xgfill=cover] {
     video {
